--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	<div id="app"></div>
         <script type="text/babel">
-	<script href="/src/index.js">
+	<script src="/src/index.js">
 		You need to enable JavaScript to run this app.
 	</script>
 	<div id="root"></div>
