--- a/index.html
+++ b/index.html
@@ -5,22 +5,17 @@
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <title>Science: A Human Right</title>
+        <title>Do 1st</title>
     </head>
     <body>
         <div id="app"></div>
         <script type="text/babel">
-	
-	import React from "react";
-import ReactDOM from "react-dom";
 
-import "./styles.css";
-
-function App() {
-  return (
+            class App extends React.Component {
+	    	render() {
+  			return (
     <div className="App">
       <h1>Science is a Human Right</h1>
-      <h2 />
       <p>
         In Article 27 of the Declaration of Human Rights it states in the first
         part that "Everyone has the right to freely share in the benefits of
@@ -79,27 +74,12 @@ function App() {
         while it is created in the lab.
       </p>
     </div>
-  );
-}
+	  );
+	}
+      }	
 
-const rootElement = document.getElementById("root");
-ReactDOM.render(<App />, rootElement);
+            ReactDOM.render(<App />, document.querySelector("#app"));
 
-	
-	</script>
-	
-	
-	<div id="app"></div>
-	<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-</body>
-
+        </script>
+    </body>
 </html>
