--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-        <title>Do 1st</title>
+        <link href="/src/styles.css" rel="stylesheet">
+        <title>Science: a Human Right</title>
     </head>
     <body>
         <div id="app"></div>
