--- a/index.html
+++ b/index.html
@@ -37,20 +37,22 @@
         This means that the accusations against Aaron Swartz and the raising of
         his expected punishment from a year to thirty one years (which is above
         life sentence where I come from) for his treacherous crime of attempting 
-        to have two human rights become reality for everyone with internet access 
-        was in and of itself a crime against humanity.
+        to have <b>two human rights become reality for everyone<b>
+        are in and of themselves crimes against humanity.
       </p>
       <p>
-        To even intend to dole out a sentence that is equivalent to the death
-        penalty which in our country is considered murder is an act so
-        incredulous it makes your hair stand up. But the fact that Aaron, upon
-        knowing these insane intentions, killed himself, amounts to nothing less
-        than man slaughter by neglecting not only his but all humans rights.
+        To even imagine to dole out a sentence that is equivalent to the <b>death
+        penalty</b> a punishment which in our country is itself considered a illegal,
+	therefore a crime, therefore in this case murder, and is therefore itself an act so
+        incredulous it makes your hair stand up. But even if you disagree with that, which would be
+	quiet discouraging, the fact that Aaron, upon
+        knowing these insane intentions, killed himself, deeply and surely amounts to nothing less
+        than man slaughter by neglecting not only his but <b>all humans</b> rights.
       </p>
       <p>
-        I hearby call for the immediate efforts to make all human knowledge in
+        I hearby call for the immediate efforts to <b>make all human knowledge</b> in
         the form of all published scientific papers not only illegally but very
-        much legally accessible for everyone by invoking the most basic of all
+        much <b>legally accessible for everyone</b> by invoking the most basic of all
         laws that exist: The Declaration of Human Rights where it states that all
         people shall have free access to sciences fruits and education.
       </p>
