--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             class App extends React.Component {
 	    	render() {
   			return (
-    <div className="App">
+    <div className="App" width="60%">
       <h1>Science is a Human Right</h1>
       <p>
         In Article 27 of the Declaration of Human Rights it states in the first
