--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         This means that the accusations against Aaron Swartz and the raising of
         his expected punishment from a year to thirty one years (which is above
         life sentence where I come from) for his treacherous crime of attempting 
-        to have <b>two human rights become reality for everyone<b>
+        to have <b>two human rights become reality for everyone</b>
         are in and of themselves crimes against humanity.
       </p>
       <p>
