--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-        <link href="/src/styles.css" rel="stylesheet">
+        <link href="./src/styles.css" rel="stylesheet">
         <title>Science: a Human Right</title>
     </head>
     <body>
